--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 	<div class="container-fluid">
 		<center>
-			<h1>Test John Walter Mackenzie Dudding, architect, 1898 to 1987</h1>
+			<h1>John Walter Mackenzie Dudding, architect, 1898 to 1987</h1>
 				<h3>More than just a dreamer</h3>
 		</center>
 <p> I only got to know my great-uncle John in the late 1970s, when I lived 10 minutes’ walk away from John and his wife Jane.  Jane was my grandmother’s oldest sister, and more sophisticated than anyone I had ever met with her twinset and pearls.  In the school holidays I was regularly invited for lunch, after which Jane would not allow me to help her tidy up, telling me I was to “keep John company.”</p>
