--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 				<link href="bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
 						<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link href="https://fonts.googleapis.com/css?family=Niconne" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
 					<style>
 	   					 body {
 	 					     text-align: left;
@@ -22,7 +22,7 @@
 	   						   background-position: left;
 	  						    color: #0B10AC; 
 	 						     text-shadow: 0 0 0.2em #F0F0C4, 0 0 0.2em #F0F0C4, 0 0 0.2em #F0F0C4;
-    							  font-family: 'Niconne';
+    							  font-family: 'Courgette';
     							  	font-size: 22px;
 
    	  					        }
