--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<img class="img-responsive" src="http://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/HilversumCityHall-front.jpg/240px-HilversumCityHall-front.jpg"> <p><small>W M Dudok's City Hall in Hilversum, built 1928-31, with which John Dudding may have been familiar</small></p>
 		</div>
 		<div class="col-xs-6">
-			<img class="img-responsive" src="https://www.aditnow.co.uk/cache/Granville-Coal-Mine-Archive-Album/Granville-Coal-Mine-Archive-Album-89906.jpg"> <p><small>Pithead baths, Granville Colliery, courtesy of Martin Stevens</small></p>
+			<img class="img-responsive" src="https://www.aditnow.co.uk/cache/Granville-Coal-Mine-Archive-Album/Granville-Coal-Mine-Archive-Album-89906.jpg"> <p><small>Pithead baths, Granville Colliery in 1979, courtesy of Martin Stevens</small></p>
 		</div> 
 		<div class="col-xs-3">
 			<iframe class="img-responsive" src="https://www.youtube.com/embed/Z3vl1c0eMcE?list=PLB2WdUGAqtUzSzfyupVwJ9UmXPxuPV04B"> </iframe> <p><small>Pathé news reel of modern pithead baths </small></p>
