--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<img class="img-responsive" src="http://xa.yimg.com/kq/groups/19580045/sn/371258697"> <p><small>34 Coneydale, Welwyn Garden City, Hertfordshire (1937)</small></p>
 		</div>
 		<div class="col-xs-4">
-			<img class="img-responsive" src="http://media.rightmove.co.uk/10k/9165/26610273/9165_20638_IMG_00_0000.jpg"> <p><small>High Timbers, Long Hill, Woldingham Garden Village, Surrey (1939)</small></p>
+			<img class="img-responsive" src="http://media.rightmove.co.uk/10k/9165/26610273/9165_20638_IMG_00_0000.jpg"> <p><small>High Timbers and High Spindle, Long Hill, Woldingham Garden Village, Surrey (1939)</small></p>
 		</div>
 		<div class="col-xs-4">
 			<img class="img-responsive" src="https://www.hpacde.org.uk/picturethepast/jpgh_derbyshire/DCNE000904.jpg"> <p><small>Pithead baths, Williamthorpe Colliery, Derbyshire (1938-40)</small></p>
